--- a/JavascriptFirstTask/JavascriptFirstTask.csproj
+++ b/JavascriptFirstTask/JavascriptFirstTask.csproj
@@ -61,6 +61,7 @@
     <Content Include="Content\Scripts\DateDisplayFormatter.min.js">
       <DependentUpon>DateDisplayFormatter.js</DependentUpon>
     </Content>
+    <Content Include="Content\Site.css" />
     <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
